--- a/leolov/src/index.css
+++ b/leolov/src/index.css
@@ -1,4 +1,33 @@
-:root {
+
+
+@import url('https://fonts.googleapis.com/css2?family=Gilda+Display&display=swap');
+
+:root{
+  --background:#FFFFFF;
+  --blueText: #002BC2;
+  --darkblue:#2C3B6F;
+  --black:#000000;
+  --pink:rgb(212, 12, 12);
+}
+
+body {
+  margin: 0;
+  padding: 0;
+  box-sizing: border-box;
+  /* font-family: 'Gilda Display', serif; */
+}
+
+main {
+  max-width: 1200px;
+  margin:auto;
+}
+
+*{
+  box-sizing: border-box;
+}
+
+
+/* :root {
   font-family: Inter, system-ui, Avenir, Helvetica, Arial, sans-serif;
   line-height: 1.5;
   font-weight: 400;
@@ -66,4 +95,4 @@ button:focus-visible {
   button {
     background-color: #f9f9f9;
   }
-}
+} */
