style update on grid

--- a/leolov/src/styles/sectionOne.module.css
+++ b/leolov/src/styles/sectionOne.module.css
@@ -1,3 +1,27 @@
 .sectiononeimg {
-  width: 30%;
+  width: 100%;
+  border-color: #002BC2;
+  border-width: 10px;
+  border-style: solid;
+}
+
+.gridCol {
+  display: grid;
+  grid-template-columns: 1fr 1fr;
+  gap: 16px;
+  margin: 20px;
+  border-color: #002BC2;
+  border-width: 10px;
+  border-style: solid;
+}
+.gridCol p {
+  font-size: 20px;
+  border: solid 2px white;
+  text-align: center;
+  padding-top: 20px;
+}
+.gridCol h2 {
+  border: solid 2px white;
+  text-align: center;
+  padding-top: 20px;
 }/*# sourceMappingURL=sectionOne.module.css.map */
