--- a/leolov/src/styles/sectionTwo.module.scss
+++ b/leolov/src/styles/sectionTwo.module.scss
@@ -1,5 +1,36 @@
 
 
 .sectiontwoimg{
-    width: 30%;
+    width: 100%;
+    border-color: #002BC2;
+    border-width: 10px;
+    border-style:solid;
+    // align-items: right;
+    
+}
+
+.gridCol {
+    display: grid; 
+    grid-template-columns: 1fr 1fr; 
+    gap: 16px; 
+    margin: 20px;
+    border-color: #002BC2;
+    border-width: 10px;
+    border-style:solid;
+    
+    
+
+    p{
+        font-size: 20px;
+        border: solid 2px white;
+        text-align: center;
+        padding-top: 20px;
+    }
+
+    h2{
+        border: solid 2px white;
+        text-align: center;   
+        padding-top: 20px;
+ 
+    }
 }
