--- a/leolov/src/styles/cards.module.scss
+++ b/leolov/src/styles/cards.module.scss
@@ -1,4 +1,5 @@
-
-p{
-    color: rgb(0, 0, 0);
-}
+// section {
+//     display: flex;
+//     justify-content: space-between;
+//     align-items: center;
+// }
