--- a/leolov/src/styles/footer.module.css
+++ b/leolov/src/styles/footer.module.css
@@ -1,7 +1,24 @@
 footer {
   background-color: #2C3B6F;
   color: #FFFFFF;
+  padding: 40px;
 }
 footer h2 {
+  font-size: 30px;
   color: #FFFFFF;
+}
+footer .iconfacebook {
+  width: 10%;
+  margin: 10px;
+}
+footer .iconlinkedin {
+  width: 10%;
+  margin: 10px;
+}
+
+.autoFlow {
+  display: grid;
+  grid-template-columns: repeat(auto-fill, minmax(400px, 1fr));
+  align-items: center;
+  gap: 8px;
 }/*# sourceMappingURL=footer.module.css.map */
