--- a/leolov/src/styles/footer.module.scss
+++ b/leolov/src/styles/footer.module.scss
@@ -1,7 +1,30 @@
 footer {
     background-color: #2C3B6F;
     color: #FFFFFF;
+    padding: 40px;
+
     h2 {
+        font-size: 30px;
         color: #FFFFFF;
     }
+    .iconfacebook{
+        width: 10%;
+        margin: 10px;
+    }
+
+    .iconlinkedin{
+        width: 10%;
+        margin: 10px;
+
+    }
+    
 }
+
+.autoFlow {
+    display: grid;
+    grid-template-columns: repeat(auto-fill, minmax(400px, 1fr)); 
+    align-items: center;
+    gap: 8px;
+
+}
+
