--- a/leolov/src/styles/cards.module.css
+++ b/leolov/src/styles/cards.module.css
@@ -1,1 +1,17 @@
-/*# sourceMappingURL=cards.module.css.map */
+.cards {
+  position: relative;
+}
+.cards .wrapper {
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+  display: flex;
+  gap: 60px;
+}
+.cards .wrapper article {
+  background-color: #ffffff;
+  border-radius: 8px;
+  box-shadow: 0px 0px 5px 5px rgba(0, 0, 0, 0.062745098);
+  padding: 50px;
+}/*# sourceMappingURL=cards.module.css.map */
