--- a/leolov/src/styles/cards.module.scss
+++ b/leolov/src/styles/cards.module.scss
@@ -1,5 +1,17 @@
-// section {
-//     display: flex;
-//     justify-content: space-between;
-//     align-items: center;
-// }
+.cards {
+    position: relative;
+    .wrapper {
+      position: absolute;
+      top: 50%;
+      left: 50%;
+      transform: translate(-50%, -50%);
+      display: flex;
+      gap: 60px;
+      article {
+        background-color: #ffffff;
+        border-radius: 8px;
+        box-shadow: 0px 0px 5px 5px #00000010;
+        padding: 50px;
+      }
+    }
+  }
