--- a/leolov/src/styles/sectionOne.module.css
+++ b/leolov/src/styles/sectionOne.module.css
@@ -9,7 +9,8 @@
   display: grid;
   grid-template-columns: 1fr 1fr;
   gap: 16px;
-  margin: 20px;
+  margin: 10px;
+  margin-top: 220px;
   border-color: #002BC2;
   border-width: 10px;
   border-style: solid;
@@ -18,7 +19,6 @@
   font-size: 20px;
   border: solid 2px white;
   text-align: center;
-  padding-top: 20px;
 }
 .gridCol h2 {
   border: solid 2px white;
