--- a/leolov/src/styles/header.module.css
+++ b/leolov/src/styles/header.module.css
@@ -1,8 +1,28 @@
-h1 {
-  color: #002BC2;
+.leolov {
+  font-family: "Jura", sans-serif;
+  color: #002bc2;
+  font-size: 8rem;
+  position: absolute;
+  top: 100px;
+  right: 50px;
+}
+.leolov span {
+  color: #ffffff;
+  font-size: 8rem;
+}
+
+.title {
+  color: #ffffff;
+  font-size: 1rem;
+  position: absolute;
+  top: 250px;
+  right: 50px;
 }
 
 .Headerimg {
   width: 100%;
   margin: 5px;
+  background-size: cover;
+  background-repeat: no-repeat;
+  height: 842px;
 }/*# sourceMappingURL=header.module.css.map */
