update on header img

--- a/leolov/src/styles/header.module.css
+++ b/leolov/src/styles/header.module.css
@@ -25,4 +25,7 @@
   background-size: cover;
   background-repeat: no-repeat;
   height: 842px;
+  border-top: 10px;
+  border-color: #002bc2;
+  border-style: solid;
 }/*# sourceMappingURL=header.module.css.map */
