--- a/leolov/src/styles/header.module.scss
+++ b/leolov/src/styles/header.module.scss
@@ -26,4 +26,8 @@
     background-size: cover;
     background-repeat: no-repeat;
     height: 842px;
+    border-top: 10px;
+    border-color: #002bc2;
+    border-style: solid;
+
 }
