--- a/leolov/src/styles/header.module.scss
+++ b/leolov/src/styles/header.module.scss
@@ -22,7 +22,7 @@
 
 .Headerimg{
     width: 100%;
-    margin: 5px;
+    margin: 0;
     background-size: cover;
     background-repeat: no-repeat;
     height: 842px;
